--- a/HW1/DL_HW1.ipynb
+++ b/HW1/DL_HW1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "DL_HW1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/is/Kqx92zhqpFhxGnIHp",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOeLtKNY+64XOL/M4tlStom",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,9 +34,10 @@
         "import numpy as np\n",
         "import time\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import torch\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -45,18 +47,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eWYlol6COg7Q",
-        "outputId": "3663aa47-4802-47b1-ad80-73b6941f054a"
+        "outputId": "89596fc5-e6fc-49ec-db03-5bd813e8aae6"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive' )"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
@@ -69,12 +71,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rmzJ8j_4Or1a",
-        "outputId": "a6c04a48-d654-4621-fd03-40e5c7a01011"
+        "outputId": "eeb43de1-8f3e-4950-bca1-d03afec5d52b"
       },
       "source": [
         "%cd '/content/gdrive/My Drive/Dataset'\n"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,30 +94,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WGvJKF-2O0RT",
-        "outputId": "e274c28f-2fb6-433e-e858-473e168a2a94"
+        "outputId": "e19e41dc-5fc9-44de-f496-e4eee3d352e1"
       },
       "source": [
         "# Training Data\n",
         "x_train = pd.read_csv('data/training_set.csv', header=None).values\n",
+        "x_train = torch.from_numpy(x_train.astype(float))\n",
         "y_train = pd.read_csv('data/training_labels_bin.csv', header=None).values\n",
+        "y_train = torch.from_numpy(y_train.astype(float))\n",
         "x_val = pd.read_csv('data/validation_set.csv', header=None).values\n",
+        "x_val = torch.from_numpy(x_val.astype(float))\n",
         "y_val = pd.read_csv('data/validation_labels_bin.csv', header=None).values\n",
+        "y_val = torch.from_numpy(y_val.astype(float))\n",
         "N = len(x_train)\n",
-        "N"
+        "x_train.shape\n"
       ],
-      "execution_count": 13,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "8442"
+              "torch.Size([8442, 354])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 24
         }
       ]
     },
@@ -123,16 +129,15 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 234
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vkOtJ1LwN8X8",
-        "outputId": "c160c755-51af-4066-f5bd-9478340274cc"
+        "outputId": "2739dd9f-ae1a-47ee-bce8-17bdfa445a1e"
       },
       "source": [
         "start = time.time()\n",
         "\n",
-        "\n",
+        "torch.manual_seed(6)\n",
         "\n",
         "num_feats = x_train.shape[1]\n",
         "n_out = y_train.shape[1]\n",
@@ -143,10 +148,33 @@
         "stepsize = 200 # epochs before changing learning rate\n",
         "threshold = 0.08 # stopping criterion\n",
         "test_interval = 10 # number of epoch before validating\n",
-        "max_epoch = 3000\n",
+        "max_epoch = 5\n",
         "\n",
         "# Define Architecture of NN\n",
         "# [ ] Intialize your network weights and biases here\n",
+        "\n",
+        "#Network size\n",
+        "inputSize = x_train.shape[1]\n",
+        "outputSize = 3\n",
+        "hidden_1_Size = 8\n",
+        "hidden_2_Size = 8\n",
+        "\n",
+        "W1= torch.rand((inputSize, hidden_1_Size), requires_grad=True)\n",
+        "W1 = 1 - (W1.float()*2)\n",
+        "\n",
+        "W2= torch.rand((hidden_1_Size, hidden_2_Size), requires_grad=True)\n",
+        "W2 = 1 - (W2.float()*2)\n",
+        "\n",
+        "W3= torch.rand((hidden_2_Size, outputSize), requires_grad=True)\n",
+        "W3 = 1 - (W3.float()*2)\n",
+        "\n",
+        "def forward(x):\n",
+        "    h1 = torch.sigmoid(torch.matmul(x.float(),W1))\n",
+        "    h2 = torch.sigmoid(torch.matmul( h1, W2))\n",
+        "    y_pred = torch.sigmoid(torch.matmul(h2, W3))\n",
+        "    # y_pred = torch.where(y_pred > 0.5, 1, 0)\n",
+        "    return y_pred\n",
+        "\n",
         "\n",
         "for epoch in range(0, max_epoch):\n",
         "    \n",
@@ -157,12 +185,12 @@
         "        idx = order[n]\n",
         "\n",
         "        # get a sample (batch size=1)\n",
-        "        x_in = np.array(x_train[idx]).reshape((num_feats, 1))\n",
-        "        y = np.array(y_train[idx]).reshape((n_out, 1))\n",
+        "        x_in = x_train[idx]\n",
+        "        y = y_train[idx]\n",
         "\n",
         "        # [ ] do the forward pass here\n",
         "        # hint: you need to save the output of each layer to calculate the gradients later\n",
-        "\n",
+        "        forward(x_in)\n",
         "    \n",
         "        # [ ] compute error and gradients here\n",
         "        # hint: don't forget the chain rule\n",
@@ -172,33 +200,38 @@
         "        # update weights and biases in output layer \n",
         "\n",
         "    \n",
-        "        sse += squared_error\n",
+        "        sse += 0 #squared_error\n",
+        "\n",
+        "    #Accuracy\n",
+        "    acc = torch.sum(forward(x_train) == y_train)/float(len(y_train))\n",
+        "    print(f\"Accuracy of Trial {epoch}: {acc}\")\n",
+        "\n",
         "\n",
         "    train_mse = sse/len(x_train)\n",
         "\n",
-        "    if epoch % test_interval == 0: \n",
-        "        # [ ] test on validation set here\n",
+        "    # if epoch % test_interval == 0: \n",
+        "    #     # [ ] test on validation set here\n",
         "\n",
-        "        # if termination condition is satisfied, exit\n",
-        "        if val_mse < threshold:\n",
-        "            break\n",
+        "    #     # if termination condition is satisfied, exit\n",
+        "    #     if val_mse < threshold:\n",
+        "    #         break\n",
         "\n",
         "    if epoch % stepsize == 0 and epoch != 0:\n",
         "        eta = eta*gamma\n",
         "        print('Changed learning rate to lr=' + str(eta))"
       ],
-      "execution_count": 12,
+      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-87400a51de8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m         \u001b[0msse\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0msquared_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0mtrain_mse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msse\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'squared_error' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Accuracy of Trial 0: 0.0\n",
+            "Accuracy of Trial 1: 0.0\n",
+            "Accuracy of Trial 2: 0.0\n",
+            "Accuracy of Trial 3: 0.0\n",
+            "Accuracy of Trial 4: 0.0\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
